<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal"

    tools:context="ylzpatient.hq.zz.com.yilianzhongpatient.fragment.layout.me.LoginFragment">

    <include
        layout="@layout/top_layout_1"
        android:id="@+id/ll_login_top"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/y70"
            android:src="@mipmap/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/k_login_userid_layout"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/x30"
                android:layout_gravity="center_vertical"
                android:src="@drawable/login_ico_user2x" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x10">

                <EditText
                    android:id="@+id/login_id"
                    android:layout_width="@dimen/x190"
                    android:layout_height="@dimen/y30"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/x3"
                    android:singleLine="true" />

                <ImageView
                    android:layout_width="@dimen/x190"
                    android:layout_height="@dimen/x8"
                    android:src="@drawable/login_input_line" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x18"
            android:contentDescription="@string/k_login_userpass_layout"


            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/x30"
                android:layout_gravity="center_vertical"

                android:src="@drawable/login_ico_password2x" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/x190"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="@dimen/x150"
                        android:layout_height="@dimen/y30"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"

                        android:imeActionId="@+id/login"
                        android:imeActionLabel="登录"
                        android:imeOptions="actionDone"
                        android:selectAllOnFocus="true"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/x3"
                        />

                    <CheckBox
                        android:id="@+id/checkbox_pass_watch"
                        android:layout_width="@dimen/x20"
                        android:layout_height="@dimen/y10"
                        android:background="@drawable/login_watch_btn_selector"
                        android:button="@null" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/x190"
                    android:layout_height="@dimen/x8"
                    android:src="@drawable/login_input_line" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/login_btn"
            android:layout_width="@dimen/x220"
            android:layout_height="@dimen/x30"
            android:layout_marginTop="@dimen/x15"
            android:background="@drawable/touch_btn_selector"
            android:text="@string/k_login_btn"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RelativeLayout
            android:layout_width="@dimen/x210"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/x5"
                android:text="@string/k_login_forget"
                android:textColor="@color/loginLayoutForgentAregisterText" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:padding="@dimen/x5"
                android:text="@string/k_login_register"
                android:textColor="@color/loginLayoutForgentAregisterText" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/x10"
            android:text="第三方登录"
            android:textColor="#989898"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微信"

                    android:textColor="@color/textPuTong" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="微博"

                    android:textColor="@color/textPuTong" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="QQ"
                    android:textColor="@color/textPuTong" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</LinearLayout>
